--- a/4_2_1_CSV_Jupyter-Copy2.ipynb
+++ b/4_2_1_CSV_Jupyter-Copy2.ipynb
@@ -112,6 +112,23 @@
     "print(\"Voici les informations concernant la ville de Paris : \")\n",
     "print(info2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "import os\n",
+    "Lieu = os.getcwd()\n",
+    "c= folium.Map(location=[49.25112, 4.0271],zoom_start=20)\n",
+    "folium.Marker([49.2510, 4.0274],popup=\"Lycée Libergier, Hello\").add_to(c)\n",
+    "c.save('CarteLibergier.html')\n",
+    "adress=Lieu+\"\\CarteLibergier.html\"\n",
+    "c.add_child(folium.LatLngPopup())\n",
+    "c"
+   ]
   }
  ],
  "metadata": {
