--- a/4_2_1_CSV_Jupyter-Copy2.ipynb
+++ b/4_2_1_CSV_Jupyter-Copy2.ipynb
@@ -119,7 +119,7 @@
     "Lieu = os.getcwd()\n",
     "# c= folium.Map(location=[49.25112, 4.0271],zoom_start=20)\n",
     "c= folium.Map(location=[latitude, longitude],zoom_start=20)\n",
-    "infos=str(li)\n",
+    "infos=\"Entreprise______________________: \"+str(li[2])+\" : \"+str(li[0])+\" : \"+str(li[1])+\" : \"+str(li[32])+\", \"+str(li[33])+\" \"+str(li[34])+\" --> \"+str(li[35])\n",
     "folium.Marker([latitude, longitude],popup=infos).add_to(c)\n",
     "c.save('CarteLibergier.html')\n",
     "adress=Lieu+\"\\CarteLibergier.html\"\n",
