--- a/4_2_1_CSV_Jupyter-Copy2.ipynb
+++ b/4_2_1_CSV_Jupyter-Copy2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,104 +26,49 @@
     "            Ligne_Donnees=[]  ## Réinitialisation d'1 futur 'tuple' vide pour boucler sur la ligne suivant du tableau\n",
     "    longueur_Donnees=len(Donnees)  ## Détermination de la longueurs des Données\n",
     "    return Donnees,longueur_Donnees\n",
-    "Donnees,longueur_Donnees=Recup_Donnees(\"Entreprises_Complet.csv\")\n",
-    "print(longueur_Donnees)\n",
-    "tupl=Donnees[2]\n",
-    "li=list(tupl)\n",
-    "print(li)\n",
-    "result=li[37]\n",
-    "print(result)\n",
-    "print(type(result))\n",
-    "result=result.split(\",\")\n",
-    "latitude=result[0]\n",
-    "longitude=result[1]\n",
-    "print(latitude)\n",
-    "print(longitude)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Données structurées : __"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**__Script 1 : Ouverture d'un fichier .csv__**"
+    "Donnees,longueur_Donnees=Recup_Donnees(\"Entreprises_Complet.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import pandas\n",
-    "\n",
-    "Lieu = os.getcwd()\n",
-    "info_villes=pandas.read_csv(\"villes_virgule.csv\")\n",
-    "print(info_villes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
+   "execution_count": 2,
    "metadata": {},
-   "source": [
-    "__ Script 2 : Accès à des informations précises du fichier .csv : __"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# import os\n",
-    "# import pandas\n",
-    "# Lieu = os.getcwd()\n",
-    "\n",
-    "# info_villes=pandas.read_csv(\"villes_virgule.csv\")\n",
-    "\n",
-    "# info1=info_villes.loc[info_villes[\"nom\"]=='paris',[\"dep\",\"cp\",\"nb_hab_1999\"]]\n",
-    "# print(\"Voici les informations concernant la ville de paris : \")\n",
-    "# print(info1)\n",
-    "\n",
-    "# print()\n",
-    "# info2=info_villes.loc[info_villes[\"nom\"]=='Paris',[\"nom\",\"dep\",\"cp\",\"nb_hab_2012\",\"dens\",\"surf\",\"long\",\"lat\",\"alt_min\",\"alt_max\"]]\n",
-    "# print(\"Voici les informations concernant la ville de Paris : \")\n",
-    "# print(info2)\n",
-    "# longitude=info_villes.loc[info_villes[\"nom\"]=='Paris',[\"long\"]]\n",
-    "# latitude=info_villes.loc[info_villes[\"nom\"]=='Paris',[\"lat\"]]\n",
-    "# print(longitude)\n",
-    "# print(latitude)\n",
-    "# longitude=longitude.extract('(\\d+)').astype(int)\n",
-    "# print(longitude)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-9e94394b3d0b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[0mresult\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\",\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mlatitude\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 15\u001b[1;33m     \u001b[0mlongitude\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mresult\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     16\u001b[0m     \u001b[1;31m# print(latitude)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m     \u001b[1;31m# print(longitude)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "import folium\n",
-    "import os\n",
     "Lieu = os.getcwd()\n",
-    "# c= folium.Map(location=[49.25112, 4.0271],zoom_start=20)\n",
-    "c= folium.Map(location=[latitude, longitude],zoom_start=20)\n",
-    "infos=\"Entreprise______________________: \"+str(li[2])+\" : \"+str(li[0])+\" : \"+str(li[1])+\" : \"+str(li[32])+\", \"+str(li[33])+\" \"+str(li[34])+\" --> \"+str(li[35])\n",
-    "folium.Marker([latitude, longitude],popup=infos).add_to(c)\n",
-    "c.save('CarteLibergier.html')\n",
-    "adress=Lieu+\"\\CarteLibergier.html\"\n",
-    "c.add_child(folium.LatLngPopup())\n",
+    "c= folium.Map(location=[49.25112, 4.0271],zoom_start=20)\n",
+    "\n",
+    "###################\n",
+    "for ligne in range(1,4):\n",
+    "    tupl=Donnees[ligne]\n",
+    "    li=list(tupl)\n",
+    "    # print(li)\n",
+    "    result=li[37]\n",
+    "    # print(result)\n",
+    "    # print(type(result))\n",
+    "    result=result.split(\",\")\n",
+    "    latitude=result[0]\n",
+    "    longitude=result[1]\n",
+    "    # print(latitude)\n",
+    "    # print(longitude)\n",
+    "    infos=\"Entreprise______________________: \"+str(li[2])+\" : \"+str(li[0])+\" : \"+str(li[1])+\" : \"+str(li[32])+\", \"+str(li[33])+\" \"+str(li[34])+\" --> \"+str(li[35])\n",
+    "    folium.Marker([latitude, longitude],popup=infos).add_to(c)\n",
+    "    c.save('CarteLibergier.html')\n",
+    "    adress=Lieu+\"\\CarteLibergier.html\"\n",
+    "    c.add_child(folium.LatLngPopup())\n",
     "c"
    ]
   }
