--- a/4_2_1_CSV_Jupyter-Copy2.ipynb
+++ b/4_2_1_CSV_Jupyter-Copy2.ipynb
@@ -52,7 +52,7 @@
     "c= folium.Map(location=[49.25112, 4.0271],zoom_start=20)\n",
     "\n",
     "###################\n",
-    "for ligne in range(1,4):\n",
+    "for ligne in range(1,6):\n",
     "    tupl=Donnees[ligne]\n",
     "    li=list(tupl)\n",
     "    # print(li)\n",
@@ -64,7 +64,7 @@
     "    longitude=result[1]\n",
     "    # print(latitude)\n",
     "    # print(longitude)\n",
-    "    infos=\"Entreprise______________________: \"+str(li[2])+\" : \"+str(li[0])+\" : \"+str(li[1])+\" : \"+str(li[32])+\", \"+str(li[33])+\" \"+str(li[34])+\" --> \"+str(li[35])\n",
+    "    infos=\"Entreprise______________________: \"+str(li[2])+\" : \"+str(li[0])+\" : \"+str(li[1])+\" : \"+str(li[32])+\", \"+str(li[33])+\" \"+str(li[34])+\" --> Tel : \"+str(li[35]+\" , Mail : \"+str(li[43]))\n",
     "    folium.Marker([latitude, longitude],popup=infos).add_to(c)\n",
     "    c.save('CarteLibergier.html')\n",
     "    adress=Lieu+\"\\CarteLibergier.html\"\n",
